= Next Release: 4.3

 - Move hosting from bitbucket.org to github.com
 - Rename tag names from entr-X.Y to X.Y

= Release History

== 4.2: March 28, 2019

 - Use pledge(2) on OpenBSD
 - New '-a' option enables response to events that occur while the utility is
   running
 - Error messages direct users to http://eradman.com/entrproject/limits.html
 - Correctly report error when a file cannot be reopened

== 4.1: June 13, 2018

 - New '-n' non-interactive option disables keyboard input
 - EV_TRACE environment variable enables file system event tracing
 - Track changes to the inode number as a workaround for missing delete
   events on the Linux kernel

== 4.0: February 02, 2018

 - Warn instead of error if kqueue fails to register on STDIN
 - Close STDIN before running the utility when the restart option is used
 - Restore terminal settings if terminated by a signal

== 3.9: September 19, 2017

 - Fix use of poll(2) to avoid possible busy-loop on Linux
 - Disable keyboard input if reading STDIN fails

== 3.8: August 11, 2017

 - Run the utility if the spacebar is pressed
 - 'q' for quit

== 3.7: February 27, 2017

 - Terminate subprocess in restart mode if a file under watch disappears
 - Allow NOTE_ATTRIB to set '/_' only if file mode changes
 - New '-s' option executes commands using $SHELL -c
 - Print usage and exit if input is from a terminal instead of a pipe

== 3.6: July 01, 2016

 - Do not print warning if _TTY_PATH cannot be opened (for chroot, docker, ...)
 - Non-existent input files produce a warning instead of an error

== 3.5: April 01, 2016

 - Removed contrib/*
 - Detect new subdirectories on Linux
 - Direct users to http://entrproject.org/limits.html if inotify hits a kernel
   limit

== 3.4: December 12, 2015

 - Terminate the child process before exiting when the reload option is combined
   with the directory watch option
 - Direct users to http://entrproject.org/limits.html if the maximum number of
   open files is exceeded
